tests/conformance/valid/query_context_all_variants.svp
-- query_context_all_variants.svp — cobertura de las cinco variantes de QueryContext

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin { APTO -> "ok"; NO_APTO -> "no"; INDETERMINADO -> "u"; }

cellspec C1 {
  b: 3;
  codomain: K3;
  semantics: Klin;
  role: Base;
}

cellstate S1 {
  spec: C1;
  vector: [Zero, One, U, Zero, Zero, One, U, Zero, One];
}

admissibility_table T1 {
  input_codomains: [K3, K3];
  output_codomain: K3;
  table: {
    (APTO, APTO) -> APTO;
    (APTO, NO_APTO) -> NO_APTO;
    (APTO, INDETERMINADO) -> INDETERMINADO;
    (NO_APTO, APTO) -> NO_APTO;
    (NO_APTO, NO_APTO) -> NO_APTO;
    (NO_APTO, INDETERMINADO) -> NO_APTO;
    (INDETERMINADO, APTO) -> INDETERMINADO;
    (INDETERMINADO, NO_APTO) -> NO_APTO;
    (INDETERMINADO, INDETERMINADO) -> INDETERMINADO;
  }
}

let E1 = evaluate(S1);
let G1 = gate([E1, E1], using: T1);

horizon H1 {
  architecture: Arch1;
  events: [CambioProfilaxis];
}

transition_data TD1 {
  horizon_ref: H1;
  events: [(CambioProfilaxis, One)];
  induced_parameters: [(C1, 3, One)];
}

frame F1 {
  index: 1;
  architecture: Arch1;
  cell_states: [S1];
  eval_results: [E1];
  gate_results: [G1];
  supervision: [];
  criticalities: [];
}

frame F2 {
  index: 2;
  architecture: Arch1;
  cell_states: [S1];
  eval_results: [E1];
  gate_results: [G1];
  supervision: [];
  criticalities: [];
}

trajectory TR1 {
  entries: [entry(frame: F1, transition: TD1), entry(frame: F2)];
}

domain D1 {
  parameters: [P1];
  interface: I1;
  horizon: H1;
  capture_specs: [Cap1];
  admissibility_specs: [Adm1];
  ternarizers: [Ter1];
  exogeneity_mask: Exo1;
  silent_u: SU1;
  transduction_policy: TP1;
  u_policy: UP1;
  closure_criterion: CCrit1;
}

agent AG1 {
  architecture: Arch1;
  domain: D1;
  query_engine: QE1;
}

query_spec QSPoint {
  query_type: PointEvaluation;
  scope: Cell;
  restrictions: [R1];
}

query_spec QSTraj {
  query_type: TrajectoryState;
  scope: Trajectory;
  restrictions: [R1];
}

query_spec QSFrameCmp {
  query_type: FrameComparison;
  scope: Pair;
  restrictions: [R1];
}

query_spec QSArch {
  query_type: GlobalCriticality;
  scope: Architecture;
  restrictions: [R1];
}

query_spec QSCov {
  query_type: CoverageState;
  scope: Architecture;
  restrictions: [R1];
}

let Q1 = query(QSPoint, by: AG1, in: PointEval(F1));
let Q2 = query(QSTraj, by: AG1, in: TrajectoryView(TR1));
let Q3 = query(QSFrameCmp, by: AG1, in: FrameComparison(F1, F2));
let Q4 = query(QSArch, by: AG1, in: ArchitectureView(Arch1, [C1], [E1], [G1]));
let Q5 = query(QSCov, by: AG1, in: CoverageReport(D1, I1, SU1));
