tests/conformance/invalid/gate_undeclared_input.svp
-- gate_undeclared_input.svp — gate con entrada no declarada debe fallar
codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin {
  APTO -> "ok";
  NO_APTO -> "no";
  INDETERMINADO -> "u";
}
cellspec C1 { b: 3; codomain: K3; semantics: Klin; role: Base; }
cellstate S1 { spec: C1; vector: [Zero, One, U, Zero, Zero, One, U, Zero, One]; }
admissibility_table T1 {
  input_codomains: [K3, K3];
  output_codomain: K3;
  table: {
    (APTO, APTO) -> APTO;
    (APTO, NO_APTO) -> NO_APTO;
    (APTO, INDETERMINADO) -> INDETERMINADO;
    (NO_APTO, APTO) -> NO_APTO;
    (NO_APTO, NO_APTO) -> NO_APTO;
    (NO_APTO, INDETERMINADO) -> NO_APTO;
    (INDETERMINADO, APTO) -> INDETERMINADO;
    (INDETERMINADO, NO_APTO) -> NO_APTO;
    (INDETERMINADO, INDETERMINADO) -> INDETERMINADO;
  }
}
let E1 = evaluate(S1);
let G_bad = gate([E1, E999], using: T1);
